to fix hamburger shrinking on mobile

--- a/themes/ppnptheme/static/css/style.css
+++ b/themes/ppnptheme/static/css/style.css
@@ -219,6 +219,7 @@ button:focus {
 
 .header__logo {
     height: 2.75rem;
+    overflow: hidden;
     pointer-events: none;
 }
 
